# cross-docs

./: .fastapicloudignore  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  RELEASE.md  flake.nix  package.json  pyproject.toml
.github/workflows/: pr.yml  release.yml
autopub_bun/: __init__.py
js/: package.json  tsconfig.json  tsup.config.ts
js/src/: app.tsx  index.ts  ssr.tsx  styles.css  tailwind.preset.cjs  types.ts
js/src/components/: CodeBlock.tsx  DocsLayout.tsx  DocsPage.tsx  EmojiConfetti.tsx  HomePage.tsx  Markdown.tsx  Sidebar.tsx  index.ts
js/src/context/: ComponentsContext.tsx
js/src/lib/: shiki.ts
python/: README.md  pyproject.toml
python/cross_docs/: __init__.py  config.py  markdown.py  middleware.py  navigation.py  routes.py
website/: .fastapicloudignore  .gitignore  DEVELOPMENT.md  app.py  justfile  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
website/content/docs/: api-javascript.md  api-python.md  customization.md  installation.md  introduction.md  markdown-features.md  quick-start.md
website/frontend/: app.tsx  index.html  ssr.tsx  styles.css
website/templates/: app.html
