[project]
name = "cross-docs-monorepo"
version = "0.3.0"
description = "Cross-docs monorepo (not published)"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["python", "website"]

[tool.autopub]
plugins = [
    "autopub_bun:CrossDocsPlugin",
]

[tool.autopub.plugin_config.cross_docs]
python_path = "python"
js_path = "js"
build_command = "build"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.124.0",
]
